--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,9 +1,9 @@
-name: Deploy Render
+name: Deploy para Render
 
 on:
   push:
     branches:
-      - main
+      - main 
 
 jobs:
   deploy:
@@ -14,7 +14,7 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Deploy para Render
-      uses: render-examples/action@v1
+      uses: render-community/render-deploy@v1 
       with:
         apiKey: ${{ secrets.RENDER_API_KEY }}
         serviceId: ${{ secrets.RENDER_SERVICE_ID }}
