--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,7 +14,7 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Deploy para Render
-      uses: Luminary-Team/eden-restrict-area@latest
+      uses: johnbeynon/render-deploy-action@a0588f9aca995a15d69a72cb2bfbf37c12e5b540
       with:
         apiKey: ${{ secrets.RENDER_API_KEY }}
         serviceId: ${{ secrets.RENDER_SERVICE_ID }}
